--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
-<body>
-    <header>
-        <nav class="container">
-            <h1>DSMovie</h1>
-            <a href="https://github.com/RaphaelEduardo">/RaphaelEduardo</a>
-        </nav>
-    </header>
-
-</body>
+    <body>
+        <header>
+            <nav class="container">
+                <h1>DSMovie</h1>
+                <div class="dsmovie-contact-container">
+                    <img src="img/github.svg" alt="Github">
+                    <a href="https://github.com/RaphaelEduardo">/RaphaelEduardo</a>
+                </div>  
+            </nav>
+        </header>
+    </body>
 </html>
