Listagem de cards

--- a/index.html
+++ b/index.html
@@ -25,12 +25,128 @@
         <main>
             <section id="dsmovie-card-list" class="container">
 
-                <div class="dsmovie-card">
-                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
-                    <div class="dsmovie-card-description">
-                        <h3>The Witcher</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="row">
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                            <div class="dsmovie-card-description">
+                                <h3>The Witcher</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
                     </div>
+                    
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/41yaWnIT8AjIHiULHtTbKNzZTjc.jpg" alt="The Flash">
+                            <div class="dsmovie-card-description">
+                                <h3>The Flash</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/mGVrXeIjyecj6TKmwPVpHlscEmw.jpg" alt="The Boys">
+                            <div class="dsmovie-card-description">
+                                <h3>The Boys</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/5P8SmMzSNYikXpxil6BYzJ16611.jpg" alt="Batman">
+                            <div class="dsmovie-card-description">
+                                <h3>Batman</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/2fhnFgwbpqzhNsx5m9x7JEUQ2qv.jpg" alt="Upload">
+                            <div class="dsmovie-card-description">
+                                <h3>Upload</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/wrhLyiY7ksW0fQCqNpa52qiOAH8.jpg" alt="Reacher">
+                            <div class="dsmovie-card-description">
+                                <h3>Reacher</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/c6H7Z4u73ir3cIoCteuhJh7UCAR.jpg" alt="Eternos">
+                            <div class="dsmovie-card-description">
+                                <h3>Eternos</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/wiE9doxiLwq3WCGamDIOb2PqBqc.jpg" alt="Peaky Blinders">
+                            <div class="dsmovie-card-description">
+                                <h3>Peaky Blinders</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/guB0jTCIlMB5gJUILzZrxXVMuyJ.jpg" alt="Duna">
+                            <div class="dsmovie-card-description">
+                                <h3>Duna</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/eNI7PtK6DEYgZmHWP9gQNuff8pv.jpg" alt="Matrix Resurrections">
+                            <div class="dsmovie-card-description">
+                                <h3>Matrix Resurrections</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/adZ9ldSlkGfLfsHNbh37ZThCcgU.jpg" alt="Os Simpsons">
+                            <div class="dsmovie-card-description">
+                                <h3>Os Simpsons</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/8T7SS4jU7TmtqrUr45JgZASCTUP.jpg" alt="Dog">
+                            <div class="dsmovie-card-description">
+                                <h3>Dog</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
             </section>
